# Industrial-RoboCell-Control

./: README.md  timeout error text in cell node
install/: local_setup.sh  setup.sh
install/cell_controller_node/lib/cell_controller_node/: cell_controller_node
install/cell_controller_node/share/cell_controller_node/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/door_node/lib/door_node/: door_node
install/door_node/share/door_node/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/emergency_node/lib/emergency_node/: emergency_node
install/emergency_node/share/emergency_node/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my-test-package/share/my-test-package/: package.sh
install/scanner_node/lib/scanner_node/: scanner_node
install/scanner_node/share/scanner_node/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/stack_light_node/lib/stack_light_node/: stack_light_node
install/stack_light_node/share/stack_light_node/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
launch/: package.xml  setup.py
log/: latest_build
pickup/: package.xml  setup.py
scripts/: cell_controller_node.py  wms_server.py
src/cell_controller_node/: package.xml  setup.cfg  setup.py
src/door_node/: setup.py
src/emergency_node/: setup.py
src/emergency_node/emergency_node/: emergency_node.py
src/scanner_node/: setup.py
src/stack_light_node/: package.xml  setup.py
