<?xml version="1.0"?>
<package format="3">
  <name>door_node</name>
  <version>0.0.0</version>
  <description>Door state publisher and service node</description>
  <maintainer email="saini.vaibhav98@gmail.com">vsaini</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>example_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
